--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div style="text-align:center; margin-bottom:20px;">
+    <img src="screenshot.png" alt="Calculator Screenshot" width="300">
+  </div>
+
   <div class="calculator">
+    <h1 class="title">Basic Calculator</h1>
     <input type="text" id="display" disabled>
     <div class="buttons">
       <button class="btn" onclick="clearDisplay()">C</button>
